--- a/app/jobsmarts-web/pom.xml
+++ b/app/jobsmarts-web/pom.xml
@@ -43,7 +43,10 @@
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
         </dependency>
-
+		<dependency>
+		    <groupId>org.antlr</groupId>
+		    <artifactId>ST4</artifactId>
+		</dependency>
         <dependency>
             <groupId>ca.quadrilateral.jobsmarts</groupId>
             <artifactId>jobsmarts-data-api</artifactId>
