--- a/app/pom.xml
+++ b/app/pom.xml
@@ -61,7 +61,12 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
                 <version>2.4.1</version>
-            </dependency>
+            </dependency>            
+            <dependency>
+			    <groupId>org.antlr</groupId>
+			    <artifactId>ST4</artifactId>
+			    <version>4.0.8</version>
+			</dependency>
             <dependency>
                 <groupId>ca.quadrilateral.jobsmarts</groupId>
                 <artifactId>jobsmarts-fetcher-api</artifactId>
